--- a/_posts/ops/2024-10-12-network.md
+++ b/_posts/ops/2024-10-12-network.md
@@ -1,15 +1,26 @@
 ---
 layout: post
 tags: [运维，Operations, 网络]
+permalink: /opt/network
 ---
 
 # linux 网络管理
 
-> 只罗列常用命令，其余具体使用，详见 `ss -h | ss --help`
+> ```bash
+> sudo ss -ltp | grep 8100
+> ```
+>
+> ```bash
+> sudo netstat -tuln | grep 8080
+> ```
+>
+> ```bash
+> sudo ss -lp sport = :80
+> ```
 
 ## 网络连接状态监控
 
-### `ss`
+### ss
 
 - **作用：**用于显示套接字统计信息以及网络连接状态，`netstat`的改进版，显示信息更全面，速度更快
 
@@ -17,7 +28,7 @@ tags: [运维，Operations, 网络]
 
   > `ss -lp`
 
-  ```ruby
+  ```bash
   Netid   State   Recv-Q   Send-Q   Local Address:Port   Peer Address:Port
    tcp    LISTEN    0       1000         *:8082                *:*           users:(("java",pid=3569,fd=233))
    udp    UNCONN    0        0           *:1947                *:*
@@ -35,11 +46,33 @@ tags: [运维，Operations, 网络]
 
   - **Peer Address**：远程端口信息，`*:*` 表示未限制特定地址
 
-- **常用：**
+- **常用选项：**
 
   - **`ss -ltp | grep 8100`**
     - `-l`：显示监听中的套接字
     - `-t`：显示`TCP`
     - `-n`：显示 `UDP`
   - `ss -tuln`
+
+### netstat
+
+- **作用：**显示网络连接状态、路由表等信息
+
+- **显示结果：**
+
+  > `netstat -tuln`
+
+  ```bash
+  Proto Recv-Q Send-Q Local Address           Foreign Address         State
+  tcp        0      0 0.0.0.0:8000            0.0.0.0:*               LISTEN
+  tcp        0      0 127.0.0.1:46145         0.0.0.0:*               LISTEN
+  tcp        0      0 0.0.0.0:8100            0.0.0.0:*               LISTEN
+  tcp        0      0 127.0.0.1:35653         0.0.0.0:*               LISTEN
+  tcp        0      0 0.0.0.0:8006            0.0.0.0:*               LISTEN
+  ```
+
+- **常用选项：**
+
+  - `netstat -r`
+  - `netstat -tulnp`
 
