--- a/_posts/ops/2024-10-12-network.md
+++ b/_posts/ops/2024-10-12-network.md
@@ -1,10 +1,11 @@
 ---
 layout: post
-tags: [运维, Operations, 网络]
+tags: [运维, Operations, 网络, 端口]
 permalink: /opt/network
+title: 网络管理
+subtitle: "linux 上常见的网络模块相关命令记录"
 ---
 
-# linux 网络管理
 
 > ```bash
 > sudo ss -ltp | grep 8100
