--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -5,13 +5,11 @@ subtitle: "Linux 环境下 mc 常用命令及其作用"
 tags: [minio, mc]
 permalink: /minio/mc 
 ---
-# [mc](https://min.io/docs/minio/linux/reference/minio-mc.html)
-
 ## [Install ](https://min.io/docs/minio/linux/reference/minio-mc.html#install-mc)
 
-- ```bash
+```bash
   export PATH=$PATH:$HOME/minio-binaries/
-  ```
+```
 
 ## mc alias
 
