--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -11,7 +11,7 @@ permalink: /minio/mc
   export PATH=$PATH:$HOME/minio-binaries/
 ```
 
-## mc alias
+## 客户端别名 mc alias
 
 ### mc alias set
 
@@ -21,7 +21,7 @@ permalink: /minio/mc
 mc alias set dest http://localhost:9000 username password
 ```
 
-##  mc version
+##  版本控制 mc version
 
 ### mc version suspend
 
@@ -37,7 +37,7 @@ mc version suspend myminio/mybucket
 mc version info myminio/mybucket
 ```
 
-## mc mirror
+## 数据迁移 mc mirror
 
 - `--dry-run` 试运行
 
