--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -5,7 +5,10 @@ subtitle: "Linux 环境下 mc 常用命令及其作用"
 tags: [minio, mc]
 permalink: /minio/mc 
 ---
-## [Install ](https://min.io/docs/minio/linux/reference/minio-mc.html#install-mc)
+
+> [mc 官方操作文档](https://docs.min.io/cn/minio-client-complete-guide.html)
+
+## Install 
 
 ```bash
   export PATH=$PATH:$HOME/minio-binaries/
