--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -14,11 +14,11 @@ permalink: /minio/mc
   export PATH=$PATH:$HOME/minio-binaries/
 ```
 
-## 客户端别名 mc alias
+## 连接别名 mc alias
 
 ### mc alias set
 
-> 设置客户端连接别名，别名相同可覆盖
+> 设置客户端连接别名，别名可覆盖。比如原来有一个别名 `a`，指向了 A 实例，现在有 B 实例，同样命名为 `a`，则原链接失效，所有操作作用于 B
 
 ```bash
 mc alias set dest http://localhost:9000 username password
