--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -18,7 +18,7 @@ permalink: /minio/mc
 
 ### mc alias set
 
-> 设置客户端连接别名，别名可覆盖。比如原来有一个别名 `a`，指向了 A 实例，现在有 B 实例，同样命名为 `a`，则原链接失效，所有操作作用于 B
+> 设置客户端连接别名，别名可覆盖。比如原来有一个别名 `a`，指向了 A 实例，现在将 B 实例，同样命名为 `a`，则原链接失效，所有操作作用于 B
 
 ```bash
 mc alias set dest http://localhost:9000 username password
