--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -31,13 +31,13 @@ mc alias set dest http://localhost:9000 username password
 > 停止指定桶上的版本控制功能
 
 ```bash
-mc version suspend myminio/mybucket
+mc version suspend dest/baoxin
 ```
 
 ### mc version info
 
 ```bash 
-mc version info myminio/mybucket
+mc version info dest/baoxin
 ```
 
 ## 数据迁移 mc mirror
@@ -45,7 +45,7 @@ mc version info myminio/mybucket
 - `--dry-run` 试运行
 
   ```bash
-  mc mirror --newer-than 3M --dry-run source/bucket1 target/bucket2
+  mc mirror --newer-than 3M --dry-run source/baoxin dest/baoxin
   ```
 
   同步三个月以内的数据
@@ -57,7 +57,7 @@ mc version info myminio/mybucket
 - `--watch` 持续监听变化
 
   ```bash
-   mc mirror --newer-than 110d --watch source_minio/baoxin dest/baoxin
+   mc mirror --newer-than 110d --watch source/baoxin dest/baoxin
   ```
 
   
