--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -40,24 +40,18 @@ mc version suspend dest/baoxin
 mc version info dest/baoxin
 ```
 
-## 数据迁移 mc mirror
+## 数据迁移 mc mirror 
+
+```bash 
+mc mirror --newer-than 110d --watch source/baoxin dest/baoxin # 复制 110 天yi'b
+```
 
 - `--dry-run` 试运行
-
-  ```bash
-  mc mirror --newer-than 3M --dry-run source/baoxin dest/baoxin
-  ```
-
-  同步三个月以内的数据
 
 - `--newer-than 1d` 一天内
 
 - `--older-than 1d` 一天前
 
 - `--watch` 持续监听变化
-
-  ```bash
-   mc mirror --newer-than 110d --watch source/baoxin dest/baoxin
-  ```
 
   
