--- a/_posts/minio/2024-11-18-mc.md
+++ b/_posts/minio/2024-11-18-mc.md
@@ -43,7 +43,7 @@ mc version info dest/baoxin
 ## 数据迁移 mc mirror 
 
 ```bash 
-mc mirror --newer-than 110d --watch source/baoxin dest/baoxin # 复制 110 天yi'b
+mc mirror --newer-than 110d --watch source/baoxin dest/baoxin # 复制 110 天以内的数据
 ```
 
 - `--dry-run` 试运行
